# api

./: .gitignore  Cargo.toml  README.md  swagger.json
.github/workflows/: publish.yml  test.yml
cli/: Cargo.toml
cli/src/: arguments.rs  main.rs
cli/src/commands/: build.rs  mod.rs  update_schema.rs
dailyboj_api/: Cargo.toml
dailyboj_api/src/: generate.rs  lib.rs
dailyboj_api/src/domain/member/: entity.rs  mod.rs  repository.rs
dailyboj_api/src/provider/: member_id_provider.rs  mod.rs
dailyboj_api/src/service/: get_version.rs  mod.rs
dailyboj_api/src/service/member/: mod.rs  profile.rs
dailyboj_api/src/service/meta/: get_version.rs  mod.rs
filedriver/: Cargo.toml
filedriver/src/: filedriver.rs  lib.rs  row.rs  table.rs
github_db/: Cargo.toml
libapi/: Cargo.toml  lib.rs
libapi/src/provider/: mod.rs  unit_provider.rs
libapi/src/service/: mod.rs
management-tool/: Cargo.toml
management-tool/public/: index.html
management-tool/public/js/: App.mjs  basis.mjs  index.mjs
management-tool/public/js/page/: landing.mjs
management-tool/public/js/styles/: reset.mjs
management-tool/src/: log.rs  main.rs
member/: list.json
member/profile/: ranolp.json
resources/database/member/: ranolp.json
resources/schema/: Member.schema.json
restpath/: Cargo.toml
route_path/: Cargo.toml  README.md
route_path/src/: lib.rs  model.rs  parse.rs
route_path/tests/: test_format.rs  test_parse.rs
schema/: member.schema.json
service_macro/: Cargo.toml  README.md
service_macro/src/: lib.rs
service_macro/tests/: test_no_param.rs  test_param.rs
shaped/: Cargo.toml  README.md
shaped/src/: lib.rs  openapi.rs  resolver.rs  service.rs  shaped.rs
shaped/src/provider/: mod.rs  provider_chain.rs  tuplify.rs  vec_provider.rs
src/domain/: mod.rs
src/domain/member/: entity.rs  mod.rs
swaggering/: Cargo.toml
