[package]
name = "cli"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
colored = "1.9.3"
dailyboj_api = { path = "../dailyboj_api" }