[package]
name = "cli"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
colored = "2.0.0"
dailyboj_api = { path = "../dailyboj_api" }
