[package]
name = "dailyboj_api"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filedriver = { path = "../filedriver" }
once_cell = "1.4.1"
serde = { version = "1.0.115", features = ["derive"] }
service_macro = { path = "../service_macro" }
shaped = { path = "../shaped" }