[package]
name = "dailyboj_api"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filedriver = { path = "../filedriver" }
once_cell = "1.4.1"
schemars = { version = "0.8.0-alpha-4", features = ["preserve_order"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
service_macro = { path = "../service_macro" }
shaped = { path = "../shaped" }