[package]
name = "libapi"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route_path = { path = "../route_path" }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
