[package]
name = "management-tool"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.2"
actix-rt = "1.1.1"
actix-web = "2.0.0"
anyhow = "1.0.32"
chrono = "0.4.15"
colored = "2.0.0"
fern = "0.6.0"
log = "0.4.11"