[package]
name = "service_macro"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.10.2"
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = "1.0.38"

[dev-dependencies]
shaped = { path = "../shaped" }