[package]
name = "shaped"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
route_path = { path = "../route_path" }
serde = "1.0.114"
serde_json = "1.0.57"
thiserror = "1.0.20"