[package]
name = "shaped"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
okapi = "0.5.0-alpha-1"
rayon = "1.3.1"
route_path = { path = "../route_path" }
schemars = { version = "0.8.0-alpha-4", features = ["preserve_order"] }
serde = "1.0.115"
serde_json = "1.0.57"
thiserror = "1.0.20"